unpackaged/objects/Summary_of_members__c.object
<CustomObject>
    <description>To save the data by generating the excel from Summary of Members button in Company object.</description>
    <fields>
        <fullName>AreaEng__c</fullName>
        <label>Area_Eng</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractEng__c</fullName>
        <label>Contract_Eng</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_FAB__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>FAB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_FABiz__c</fullName>
        <label>FABiz</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_FA__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>FA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_FCV__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>FCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_FC__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>FC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_FGP__c</fullName>
        <label>FGP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_FG__c</fullName>
        <label>FG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_FMX__c</fullName>
        <label>FMX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_F__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>F</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_H__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_KGX04__c</fullName>
        <label>KGX04</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_KGX05__c</fullName>
        <label>KGX05</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_KGX06__c</fullName>
        <label>KGX06</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_MAB__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>MAB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_MABiz__c</fullName>
        <label>MABiz</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_MA__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>MA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_MB__c</fullName>
        <label>MB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_MCV__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>MCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_MC__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>MC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_MV__c</fullName>
        <label>MV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_M__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>M</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_SAB__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>SAB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_SABiz__c</fullName>
        <label>SABiz</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_SA__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>SA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_SCV__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>SCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_SC__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>SC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_SGP__c</fullName>
        <label>SGP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_SG__c</fullName>
        <label>SG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_SMX__c</fullName>
        <label>SMX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data_S__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>S</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Summary of Members</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>ContractEng__c</columns>
        <columns>Area__c</columns>
        <columns>AreaEng__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Summary of member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <recordTypes>
        <fullName>Aggregate_Sheet_Affiliation</fullName>
        <active>true</active>
        <label>Aggregate Sheet(Affiliation)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Aggregate_Sheet_Contract</fullName>
        <active>true</active>
        <label>Aggregate Sheet(Contract)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>